# paper_plane_x

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  PROJECT_CONVENTIONS.md  README.md  justfile
paper_plane_x_backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
paper_plane_x_backend/config/: default.toml  example.local.toml
paper_plane_x_backend/prompts/data_processor/: Analysis.md  Extraction.md  Fact_Check.md  System.md
paper_plane_x_backend/scripts/: export.py  link_exported_papers_to_project.py
paper_plane_x_backend/src/paper_plane_x_backend/: README.md  config.py  main.py  pyproject.toml
paper_plane_x_backend/src/paper_plane_x_backend/agents/: __init__.py  data_processor.py
paper_plane_x_backend/src/paper_plane_x_backend/api/: __init__.py  dependencies.py
paper_plane_x_backend/src/paper_plane_x_backend/core/: __init__.py
paper_plane_x_backend/tests/: README.md  conftest.py
paper_plane_x_backend/tests/integration/: test_app_health.py  test_data_process_api.py  test_librarian_api.py  test_project_api.py
paper_plane_x_backend/tests/unit/: conftest.py  test_agent_runtime.py  test_agent_runtime_extended.py  test_chroma_store.py  test_config_settings.py  test_data_process_orchestrator.py  test_data_process_router_lifecycle.py  test_data_process_task_manager.py  test_data_processor_agent_group.py  test_database_service.py  test_models_core.py  test_orchestrators_data_process.py  test_paper_parser.py  test_paper_processor.py  test_paper_repository.py  test_paper_service.py  test_paper_service_error_paths.py  test_tools_librarian.py
(+59 files in other folders)
