[project]
name = "paper-plane-x-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "windlx", email = "1418043337@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
